# ferriskey-cli

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: crates-io.yaml  docker.yaml  release.yaml
libs/ferriskey-cli-client/: Cargo.toml
libs/ferriskey-cli-client/src/: lib.rs
libs/ferriskey-cli-commands/: Cargo.toml
libs/ferriskey-cli-commands/src/: context.rs  lib.rs  user.rs
libs/ferriskey-cli-core/: Cargo.toml
libs/ferriskey-cli-core/src/: client.rs  config.rs  context.rs  lib.rs  realm.rs  user.rs
libs/ferriskey-client/: Cargo.toml
libs/ferriskey-commands/: Cargo.toml
libs/ferriskey-commands/src/: client.rs  lib.rs  realm.rs  user.rs
src/: main.rs
