[package]
name = "ferris-ctl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Official FerrisKey CLI"

[workspace]
members = ["libs/ferriskey-client", "libs/ferriskey-commands", "libs/ferriskey-cli-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["nathaelb <pro.nathaelbonnal@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ferriskey/ferriskey/tree/main/cli"
homepage = "https://ferriskey.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ferriskey-commands = { path = "libs/ferriskey-commands", version = "0.1.0" }
ferriskey-cli-core = { path = "libs/ferriskey-cli-core", version = "0.1.0" }
