[package]
name = "ferriskey-cli-commands"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Clap command definitions for the FerrisKey CLI"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
