[package]
name = "ferriskey-cli-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Application runtime for the FerrisKey CLI"

[lib]
doctest = false

[dependencies]
ferriskey-cli-client = { path = "../ferriskey-cli-client", version = "0.1.0" }
ferriskey-cli-commands = { path = "../ferriskey-cli-commands", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.20"
